--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,17 @@ project(OceanTracer)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/utils)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
+                    ${CMAKE_CURRENT_SOURCE_DIR}/include/utils
+                    ${CMAKE_CURRENT_SOURCE_DIR}/include/compute)
 
 add_library("${PROJECT_NAME}_lib" STATIC)
-target_include_directories("${PROJECT_NAME}_lib" PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/utils)
+target_include_directories("${PROJECT_NAME}_lib" PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
+                                                        ${CMAKE_CURRENT_SOURCE_DIR}/include/utils
+                                                        ${CMAKE_CURRENT_SOURCE_DIR}/include/compute)
+
 add_subdirectory(src)
 
 add_executable(${PROJECT_NAME} main.cpp)
