--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,7 @@
 target_sources("${PROJECT_NAME}_lib" PRIVATE
     "utils/Complex.cpp"
-    "utils/Vector3.cpp")
+    "utils/Vector2.cpp"
+    "utils/Vector3.cpp"
+    "compute/FFT.cpp"
+    "compute/Gaussian.cpp"
+    "compute/PhillipsSpectrum.cpp")
