--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,4 +4,5 @@ target_sources("${PROJECT_NAME}_lib" PRIVATE
     "utils/Vector3.cpp"
     "compute/FFT.cpp"
     "compute/Gaussian.cpp"
-    "compute/PhillipsSpectrum.cpp")
+    "compute/PhillipsSpectrum.cpp"
+    "rendering/Image.cpp")
