feat(ffmpeg/boost) : added boost for cli and ffmpeg to save in mp4 format

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ target_sources("${PROJECT_NAME}_lib" PRIVATE
     "utils/Complex.cpp"
     "utils/Vector2.cpp"
     "utils/Vector3.cpp"
+    "utils/CommandLineOptions.cpp"
     "compute/FFT.cpp"
     "compute/Gaussian.cpp"
     "compute/PhillipsSpectrum.cpp"
