fix(rename) : renamed the repository and some files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ target_sources("${PROJECT_NAME}_lib" PRIVATE
     "utils/Vector3.cpp"
     "compute/FFT.cpp"
     "compute/Gaussian.cpp"
-    "compute/PhillipsSpectrum.cpp"
+    "compute/Ocean.cpp"
     "rendering/Image.cpp"
     "rendering/Ray.cpp"
     "rendering/Camera.cpp"
